sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:9: error: '=' expected but ';' found.
			for (pancakeActuel <- 0 to rang) {
^