sort.pancake.lessons.sort.pancake.BasicPancake.scala.code
def solve() {
	for (rang <- getTaillePile-1 to 0 by -1) {
		if (estTriee()) {
			return
		}
		if (getRayonCrepe(rang)!=rang-1) {
			var rangGrosPancake=-1
			for (pancakeActuel <- 0 to rang) {
				if (getRayonCrepe()==rank+1) {
					rangGrosPancake=PancakeActuel;
				}
			}
			if (rangGrosPancake!=0) {
				retourne(rangGrosPancake+1)
			}
			if (rang!=0) {
				retourne(getRayonCrepe(0))
			}
		}
	}
}
